fix some annoying project name and focus visible bugs

--- a/src/components/ProjectBar/ProjectBar.scss
+++ b/src/components/ProjectBar/ProjectBar.scss
@@ -36,11 +36,18 @@
   }
 
   .btn--tertiary {
-    border: none;
     border-radius: 0;
     height: 100%;
     min-width: $space-4;
     padding: $space-1-5;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -3px;
+      right: 0px;
+      bottom: -3px;
+    }
 
     span {
       display: none;
@@ -89,8 +96,12 @@
   .project-bar__right {
     border-left: 1px solid $rpf-grey-150;
 
-    .btn--tertiary {
+    .btn--tertiary::after {
       border-right: 1px solid $rpf-grey-150;
+    }
+
+    .btn--tertiary:focus-visible::after {
+      border: 1px solid transparent;
     }
   }
 }
@@ -107,8 +118,12 @@
   .project-bar__right {
     border-left: 1px solid $rpf-grey-600;
 
-    .btn--tertiary {
+    .btn--tertiary::after {
       border-right: 1px solid $rpf-grey-600;
+    }
+
+    .btn--tertiary:focus-visible::after {
+      border: 1px solid transparent;
     }
   }
 }
